// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> Default story renders snapshot 1`] = `
<div
  class="progress-bar progress-bar--labelLayout-vertical w-[200px]"
>
  <div
    class="progress-bar__labels"
  >
    <span
      class="text text--body-sm progress-bar__valueLabel"
    >
      33%
    </span>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby=":r0:"
    class="progress-bar__track progress-bar__track--context-standalone"
    role="progressbar"
    style="--progress-bar__progress: 0.33;"
  >
    <div
      class="progress-bar__content"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> DescriptionLabelAndValueStringResizingBehavior story renders snapshot 1`] = `
<div
  class="progress-bar progress-bar--labelLayout-vertical w-[366px]"
>
  <div
    class="progress-bar__labels"
  >
    <label
      class="label label--md"
      id=":r8:"
    >
      <span
        class="text text--label-md"
      >
        We should prevent labels from being this long, but if they do, they wrap
      </span>
    </label>
    <span
      class="text text--body-sm progress-bar__valueLabel"
    >
      50% of 100%
    </span>
  </div>
  <div
    aria-labelledby=":r8:"
    class="progress-bar__track progress-bar__track--context-standalone"
    role="progressbar"
    style="--progress-bar__progress: 0.2;"
  >
    <div
      class="progress-bar__content"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> HorizontalLabelAndValueStringResizingBehavior story renders snapshot 1`] = `
<div
  class="progress-bar progress-bar--labelLayout-horizontal w-[366px]"
>
  <div
    class="progress-bar__labels"
  >
    <label
      class="label label--md"
      id=":r9:"
    >
      <span
        class="text text--label-md"
      >
        We should prevent labels from being this long, but if they do, they wrap
      </span>
    </label>
    <span
      class="text text--body-sm progress-bar__valueLabel"
    >
      50% of 100%
    </span>
  </div>
  <div
    aria-labelledby=":r9:"
    class="progress-bar__track progress-bar__track--context-standalone"
    role="progressbar"
    style="--progress-bar__progress: 0.2;"
  >
    <div
      class="progress-bar__content"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> WithCustomHorizontalValueLabel story renders snapshot 1`] = `
<div
  class="progress-bar progress-bar--labelLayout-horizontal w-[200px]"
>
  <div
    class="progress-bar__labels"
  >
    <span
      class="text text--body-sm progress-bar__valueLabel"
    >
      Value
    </span>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby=":r5:"
    class="progress-bar__track progress-bar__track--context-standalone"
    role="progressbar"
    style="--progress-bar__progress: 0.5;"
  >
    <div
      class="progress-bar__content"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> WithDescriptionLabel story renders snapshot 1`] = `
<div
  class="progress-bar progress-bar--labelLayout-vertical w-[200px]"
>
  <div
    class="progress-bar__labels"
  >
    <label
      class="label label--md"
      id=":r2:"
    >
      <span
        class="text text--label-md"
      >
        Label
      </span>
    </label>
    <span
      class="text text--body-sm progress-bar__valueLabel"
    >
      33%
    </span>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby=":r2:"
    class="progress-bar__track progress-bar__track--context-standalone"
    role="progressbar"
    style="--progress-bar__progress: 0.33;"
  >
    <div
      class="progress-bar__content"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> WithDescriptionLabelAndValueLabel story renders snapshot 1`] = `
<div
  class="progress-bar progress-bar--labelLayout-vertical w-[200px]"
>
  <div
    class="progress-bar__labels"
  >
    <label
      class="label label--md"
      id=":r6:"
    >
      <span
        class="text text--label-md"
      >
        Label
      </span>
    </label>
    <span
      class="text text--body-sm progress-bar__valueLabel"
    >
      Value
    </span>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby=":r6:"
    class="progress-bar__track progress-bar__track--context-standalone"
    role="progressbar"
    style="--progress-bar__progress: 0.33;"
  >
    <div
      class="progress-bar__content"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> WithHorizontalDescriptionLabel story renders snapshot 1`] = `
<div
  class="progress-bar progress-bar--labelLayout-horizontal w-[200px]"
>
  <div
    class="progress-bar__labels"
  >
    <label
      class="label label--md"
      id=":r4:"
    >
      <span
        class="text text--label-md"
      >
        Label
      </span>
    </label>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby=":r4:"
    class="progress-bar__track progress-bar__track--context-standalone"
    role="progressbar"
    style="--progress-bar__progress: 0.33;"
  >
    <div
      class="progress-bar__content"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> WithLongDescriptionLabel story renders snapshot 1`] = `
<div
  class="progress-bar progress-bar--labelLayout-vertical w-[200px]"
>
  <div
    class="progress-bar__labels"
  >
    <label
      class="label label--md"
      id=":r3:"
    >
      <span
        class="text text--label-md"
      >
        We should prevent labels from being this long, but if they do, they wrap
      </span>
    </label>
    <span
      class="text text--body-sm progress-bar__valueLabel"
    >
      50%
    </span>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby=":r3:"
    class="progress-bar__track progress-bar__track--context-standalone"
    role="progressbar"
    style="--progress-bar__progress: 0.5;"
  >
    <div
      class="progress-bar__content"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> WithLongDescriptionLabelAndValueLabel story renders snapshot 1`] = `
<div
  class="progress-bar progress-bar--labelLayout-vertical w-[200px]"
>
  <div
    class="progress-bar__labels"
  >
    <label
      class="label label--md"
      id=":r7:"
    >
      <span
        class="text text--label-md"
      >
        If both labels are long, it looks really wack
      </span>
    </label>
    <span
      class="text text--body-sm progress-bar__valueLabel"
    >
      Fifty units of one hundred
    </span>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby=":r7:"
    class="progress-bar__track progress-bar__track--context-standalone"
    role="progressbar"
    style="--progress-bar__progress: 0.33;"
  >
    <div
      class="progress-bar__content"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> WithNoLabels story renders snapshot 1`] = `
<div
  class="progress-bar progress-bar--labelLayout-vertical w-[200px]"
>
  <div
    aria-label="33 percent"
    aria-labelledby=":r1:"
    class="progress-bar__track progress-bar__track--context-standalone"
    role="progressbar"
    style="--progress-bar__progress: 0.33;"
  >
    <div
      class="progress-bar__content"
    />
  </div>
</div>
`;
